Course Sections endpoint to recreate course listings pages
